# gobox-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gobox_auth.py  gobox_client.py  gobox_mcp.py  pyproject.toml
src/gobox_mcp/: __init__.py  __main__.py  client.py  server.py
src/gobox_mcp/tools/: __init__.py  consignments_tools.py  goship_tools.py  locations_tools.py  orders_tools.py  products_tools.py  reports_tools.py  shops_tools.py  warehouses_tools.py  webhooks_tools.py
tools/: consignments_tools.py  goship_tools.py  locations_tools.py  orders_tools.py  products_tools.py  reports_tools.py  shops_tools.py  warehouses_tools.py  webhooks_tools.py
